<resources>
    <string name="app_update_version_file_download_url">http://123.59.23.183/assets/000/version.xml</string>
    <string name="app_name">星网卫通</string>
    <string name="action_settings">帮助</string>
    <string name="section_format">Hello World from section:\nHello World from section:\nHello World from section:\nHello World from section:\nHello World from section:\nHello World from section:\nHello World from section:\nHello World from section:\nHello World from section:\nHello World from section: %1$d</string>
    <string name="cancel_button_prompt">您选择了取消</string>
    <string name="toolbar_hint">标题</string>
    <string name="toolbar_button_default_text"> </string>
    <string name="toolbar_left_button_default_gravity">left</string>
    <string name="toolbar_right_button_default_gravity">right</string>
    <string name="welcome_version">版本号:%1$s</string>
    <string name="title_activity_welcome_activity">欢迎</string>
    <string name="welcome_skip">跳过</string>
    <string name="welcome_install_line">安装线缆</string>
    <string name="welcome_install_line_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;便携站与调制解调器一起组成卫通系统。便携站的用户接口都来自电控箱面板。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本产品提供了多种方式实现对便携站监控。用户还可以通过网线和串口两种有线方式监控便携站。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;APP控制方式采用无线WI-FI为信号传输介质。当采用APP控制方式时，不用的用户面板接口需加装防尘盖。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;控制线缆安装时，航插头红点朝向正上方轻轻插入即可，无须铆足劲以免损坏插头。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;射频线缆安装时，射频头直接插入，再逆时针旋拧直至拧紧，注意不要扭力过大。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;为防止设备漏电，导致触电，请安装接地线。设备接地后会大幅度提高电磁兼容能力。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;线缆安装完毕后，即可上电。
</string>
    <string name="welcome_fix_device">固定设备</string>
    <string name="welcome_fix_device_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;通过安装在电控箱上盖前端的水平仪和指南针将天线本体保持正南并水平放置。保证方位偏置不要大于10°。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在4级最大风速以下：只需支臂展开就能够实现正常寻星锁星。（风速：≤28km/h）\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在5~6级风速以下：由于天线较轻，需支臂配置。能够正常寻星锁星；通信性能不受影响。（风速：≤50km/h）\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在7、8级风速：需锁紧机构和配重。此时不能完成寻星。但已经锁星的前提下，可以继续工作，通信性能降低，天线轻微颤动。（风速：≤65km/h）\n
</string>
    <string name="welcome_check_device">检查设备</string>
    <string name="welcome_check_device_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;便携站由天线主体和辅瓣及其配件3部分构成。配件包含：电源线、网线（监视）、发射线缆、接收线缆、GNSS天线。如果选配手持机，还应当包括手持机和手持机线缆。此外，还包含《产品使用说明书》、合格证和入网许可证附件各一份。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用户使用前需检查物品是否齐全，包装是否完好。
</string>
    <string name="welcome_one_key">一键通功能</string>
    <string name="welcome_one_key_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;如果无需更换目标星或修改其他设置选项，天线对星完全可以脱离控制终端，只通过天线本体上的一键通就可以实现通信。\n
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;上电后，直接点击一键通，天线展开至安装天线面位置，再点击一键通，天线开始自动寻星，直至锁星。\n
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;通过长按一键通大于3秒，天线就开始收藏，直至收藏完成，就可以切断电源了。\n
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;如需APP控制天线，上电之后延时1分钟用于网络建立连接。之后点击进入引导主页。\n</string>
    <string name="guide_done">进入引导主页</string>
    <string name="main_connected_ssid_prompt">您连接的wifi是：</string>
    <string name="communication_state_connected">连接</string>
    <string name="communication_state_disconnected">断开</string>
    <string name="antenna_operate_explode">展开</string>
    <string name="antenna_operate_reset">复位</string>
    <string name="antenna_operate_fold">收藏</string>
    <string name="antenna_state_folded">已收藏</string>
    <string name="antenna_state_exploding">展开中</string>
    <string name="antenna_state_exploded">已展开</string>
    <string name="antenna_state_init">寻零</string>
    <string name="antenna_state_searching">寻星</string>
    <string name="antenna_state_manual">手动</string>
    <string name="antenna_state_locked">锁定</string>
    <string name="antenna_state_folding">收藏中</string>
    <string name="antenna_state_lock_loose">失锁</string>
    <string name="antenna_state_abnormal">异常</string>
    <string name="antenna_state_paused">停止</string>
    <string name="antenna_state_resetting">复位中</string>
    <string name="antenna_state_reset">已复位</string>
    <string name="antenna_state_lock">锁星</string>
    <string name="explode_confirm">你确定要展开吗？</string>
    <string name="fold_confirm">你确定要收藏吗？</string>
    <string name="reset_confirm">你确定要复位吗？</string>
    <string name="searching_confirm">开始寻星？</string>
    <string name="switch_destination">切换目标星</string>
    <string name="not_connected_wifi_prompt">你连接的WIFI是%1$s\n请连接设备</string>
    <string name="antenna_init_bind_confirm">初始化中,不能操作</string>
    <string name="antenna_exploding_bind_confirm">当天线正在展开中,不能操作</string>
    <string name="antenna_exploded_bind_confirm">当天线已经展开,不能操作</string>
    <string name="antenna_folding_bind_confirm">当天线正在收藏中,不能操作</string>
    <string name="antenna_folded_bind_confirm">当天线已经收藏,不能操作</string>
    <string name="locker_bind_confirm">当锁紧机构处于锁紧时，不能操作\n请将方位手刹松开，天线才能运动</string>
    <string name="saving_bind_confirm">当节能处于开启时，不能操作\n请先退出节能天线才能运动</string>
    <string name="saving_bind_quit">退出</string>
    <string name="locker_state_locked">锁紧</string>
    <string name="locker_state_released">松开</string>
    <string name="energy_state_charged">关闭</string>
    <string name="energy_state_saved">开启</string>
    <string name="gnss_state_enabled">已定位</string>
    <string name="gnss_state_disabled">未定位</string>
    <string name="operate_confirm_title">提示</string>
    <string name="operate_confirm_ok">确定</string>
    <string name="operate_confirm_cancel">取消</string>
    <string name="operate_confirm_cancel_toast">您已经取消</string>
    <string name="create_new_file_complete">添加文件成功：</string>
    <string name="create_new_file_canceled">您没有新建文件</string>
    <string name="title_city_list">城市列表</string>
    <string name="city_list_select_province">选择省份</string>
    <string name="title_city_detail">城市详情</string>
    <string name="select_all">全选</string>
    <string name="select_none">不选</string>
    <string name="satellite_toolbar_title">卫星列表</string>
    <string name="title_satellite_detail">卫星详情</string>
    <string name="satellite_uuid">UUID</string>
    <string name="satellite_id_key">序号</string>
    <string name="satellite_name_key">卫星名</string>
    <string name="satellite_polarization_key">极化</string>
    <string name="satellite_longitude_key">经度</string>
    <string name="satellite_beacon_key">信标</string>
    <string name="satellite_threshold_key">门限</string>
    <string name="satellite_carrier_key">载波</string>
    <string name="satellite_symbol_rate_key">符号率</string>
    <string name="satellite_detail_uuid_key">UUID</string>
    <string name="satellite_detail_id_key">序号</string>
    <string name="satellite_detail_name_key">卫星名称</string>
    <string name="satellite_detail_polarization_key">极化方式</string>
    <string name="satellite_detail_longitude_key">卫星经度</string>
    <string name="satellite_detail_beacon_key">信标频率</string>
    <string name="satellite_detail_beacon_hint">10750~40000</string>
    <string name="satellite_detail_threshold_key">门限</string>
    <string name="satellite_detail_threshold_hint">0.0~10.0</string>
    <string name="satellite_detail_carrier">载波频率</string>
    <string name="satellite_detail_carrier_hint">10750~40000</string>
    <string name="satellite_detail_symbol_rate_key">符号率</string>
    <string name="satellite_detail_symbol_rate_hint">6000~30000</string>
    <string name="satellite_detail_comment_key">备注</string>
    <string name="input_error_dialog_message">您的某些输入有误，确认继续？</string>
    <string name="city_detail_id_key">序号</string>
    <string name="city_detail_province">所属省份</string>
    <string name="city_detail_name_key">城市名称</string>
    <string name="city_detail_longitude_key">经度</string>
    <string name="city_detail_latitude_key">纬度</string>
    <string name="key_province_all">所有省份</string>
    <string name="satellite_recover">恢复出厂</string>
    <string name="add_satellite">增加卫星</string>
    <string name="delete_satellite">删除卫星</string>
    <string name="add_city">增加城市</string>
    <string name="delete_city">删除城市</string>
    <string name="title_activity_guide">引导页</string>
    <string name="confirm_delete_message">您确定需要删除你所选择的%1$s</string>
    <string name="guide_main__exploded">展&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;开</string>
    <string name="guide_main_location">位置输入</string>
    <string name="guide_main_destination_satellite">目&#160;&#160;标&#160;&#160;星</string>
    <string name="guide_main_searching_mode">寻星模式</string>
    <string name="guide_main_searching">寻&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;星</string>
    <string name="guide_main_lock">锁&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;紧</string>
    <string name="guide_main_save">节&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;能</string>
    <string name="guide_main_enter">直接进入</string>
    <string name="guide_main_enter_icon">&#160;&#160;》》》</string>
    <string name="title_activity_application">应用主页面</string>
    <string name="main_bottom_nav_monitor">监视</string>
    <string name="main_bottom_nav_control">控制</string>
    <string name="main_bottom_nav_status">状态</string>
    <string name="main_bottom_nav_log">记录</string>
    <string name="main_bottom_nav_settings">设置</string>
    <string name="main_control_operate">手动控制</string>
    <string name="main_control_operate_step">步进控制</string>
    <string name="main_control_operate_speed">速度控制</string>
    <string name="main_control_operate_location">位置控制</string>
    <string name="main_control_operate_calculate">对星计算</string>
    <string name="main_control_speed_info_headline">当前数值</string>
    <string name="main_control_speed_azimuth">方位角</string>
    <string name="main_control_speed_azimuth_hint">0.00</string>
    <string name="main_control_speed_pitch">俯仰角</string>
    <string name="main_control_speed_pitch_hint">0.00</string>
    <string name="main_control_speed_polarization">极化角</string>
    <string name="main_control_speed_polarization_hint">0.00</string>
    <string name="main_control_speed_agc">AGC电平</string>
    <string name="main_control_speed_movement">运动方式:</string>
    <string name="main_control_speed_movement_step">步进</string>
    <string name="main_control_speed_movement_continuous">连续</string>
    <string name="main_control_speed_palstance">角速度（°/s）：</string>
    <string name="main_control_step_unit">步进单位（°）：</string>
    <string name="main_control_speed_palstance_hint">1.0</string>
    <string name="manual_direction">方位</string>
    <string name="manual_pitch">俯仰</string>
    <string name="manual_polarization">极化</string>
    <string name="manual_pause">暂停</string>
    <string name="latitude_degree_unit_east">°E</string>
    <string name="latitude_degree_unit_west">°W</string>
    <string name="longitude_degree_unit_north">°N</string>
    <string name="longitude_degree_unit_south">°S</string>
    <string name="angle_degree_unit">°</string>
    <string name="voltage_unit">V</string>
    <string name="frequency_unit">MHz</string>
    <string name="location_control_current_info">当前角度</string>
    <string name="location_control_current_azimuth">当前方位角</string>
    <string name="follow_me_bottom_nav_main">引导主页</string>
    <string name="follow_me_bottom_nav_preview">上一步</string>
    <string name="follow_me_bottom_nav_next">下一步</string>
    <string name="follow_me_bottom_nav_monitor">监控页面</string>
    <string name="main_bottom_nav_me_language">多语言环境</string>
    <string name="main_bottom_nav_me_error_report">故障报修</string>
    <string name="main_bottom_nav_me_advices">意见反馈</string>
    <string name="main_bottom_nav_me_about">关于卫通</string>
    <string name="main_bottom_nav_me_version">APP版本</string>
    <string name="main_bottom_nav_me_switch_device">切换设备</string>
    <string name="main_me_font">修改字体</string>
    <string name="settings_reference_dvb_unit">kbps</string>
    <string name="settings_reference_carrier_unit">KHz</string>
</resources>