<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_navigation_monitor"
        android:icon="@drawable/monitor"
        android:title="@string/main_bottom_nav_monitor" />

    <item
        android:id="@+id/main_navigation_application"
        android:icon="@drawable/application"
        android:title="@string/main_bottom_nav_control" />

    <item
        android:id="@+id/main_navigation_status"
        android:icon="@drawable/status"
        android:title="@string/main_bottom_nav_status" />
    <item
        android:id="@+id/main_navigation_collect"
        android:icon="@drawable/record"
        android:title="@string/main_bottom_nav_log" />
    <item
        android:id="@+id/main_navigation_settings"
        android:icon="@mipmap/settings"
        android:title="@string/main_bottom_nav_settings" />

</menu>
