<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_step_control"
        android:icon="@mipmap/step"
        android:title="@string/main_control_operate_step" />

    <item
        android:id="@+id/navigation_speed_manual"
        android:icon="@drawable/speed_manual"
        android:title="@string/main_control_operate_speed" />

    <item
        android:id="@+id/navigation_location_manual"
        android:icon="@drawable/location_manual"
        android:title="@string/main_control_operate_location" />

    <item
        android:id="@+id/navigation_calculate_manual"
        android:icon="@drawable/calculate_manual"
        android:title="@string/main_control_operate_calculate" />

</menu>
