<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/linear_no_shadow_no_padding">
    <LinearLayout
        android:id="@+id/container"
        android:layout_marginTop="@dimen/app_bar_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.edroplet.sanetel.activities.main.MainActivity">

        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_me_font"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_me_font"/>
        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_bottom_nav_me_language"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_bottom_nav_me_language"/>
        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_bottom_nav_me_error_report"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_bottom_nav_me_error_report"/>
        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_bottom_nav_me_advices"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_bottom_nav_me_advices"/>
        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_bottom_nav_me_about"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_bottom_nav_me_about"/>
        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_bottom_nav_me_version"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_bottom_nav_me_version"/>
        <com.edroplet.sanetel.view.custom.CustomButton
            android:id="@+id/main_bottom_nav_me_switch_device"
            style="@style/button_vertical_style"
            android:layout_width="match_parent"
            android:text="@string/main_bottom_nav_me_switch_device"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
