
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/globalPageMarginLeft"
    android:paddingEnd="@dimen/globalPageMarginRight">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.edroplet.sanetel.activities.settings.SatelliteDetailFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal"
            android:visibility="gone">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_uuid_key"/>
            <com.edroplet.sanetel.view.custom.CustomTextView
                style="@style/radio_group_second_item_edit_horizontal_style"
                android:id="@+id/satellite_detail_uuid"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal"
            android:visibility="invisible">
        <com.edroplet.sanetel.view.custom.JustifyTextView
            style="@style/radio_group_custom_item_first_filed_horizontal_style"
            android:text="@string/satellite_detail_id_key"/>
        <com.edroplet.sanetel.view.custom.CustomTextView
            style="@style/radio_group_second_item_edit_horizontal_style"
            android:id="@+id/id_detail"/>
        </LinearLayout>
        <!--卫星名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_name"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_name_key"/>
            <com.edroplet.sanetel.view.custom.CustomEditText
                style="@style/radio_group_second_item_edit_horizontal_style"
                android:id="@+id/name_detail"/>
        </LinearLayout>
        <!--极化方式-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_polar"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_polarization_key"/>
            <Spinner
                style="@style/radio_group_second_item_edit_horizontal_style"
                android:id="@+id/polarization_detail"
                android:entries="@array/satellites_polarization"
                android:textAlignment="center"/>
        </LinearLayout>
        <!--经度-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_longitude"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_height="match_parent"
                android:padding="@dimen/list_detail_padding"
                android:text="@string/satellite_detail_longitude_key"/>

            <com.edroplet.sanetel.view.custom.CustomEditText
                style="@style/radio_group_custom_item_edit_horizontal_style"
                android:id="@+id/longitude_detail"
                android:inputType="numberDecimal|numberSigned"/>
            <com.edroplet.sanetel.view.custom.CustomTextView
                style="@style/radio_group_custom_item_third_filed_horizontal_style"
                android:text="@string/angle_degree_unit"/>
        </LinearLayout>
        <!--门限-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_threshold"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_threshold_key"/>
            <com.edroplet.sanetel.view.custom.CustomEditText
                style="@style/radio_group_custom_item_edit_horizontal_style"
                android:id="@+id/threshold_detail"
                android:hint="@string/satellite_detail_threshold_hint"
                android:inputType="numberDecimal|number"/>
            <com.edroplet.sanetel.view.custom.CustomTextView
                style="@style/radio_group_custom_item_third_filed_horizontal_style"
                android:text="@string/voltage_unit"/>
        </LinearLayout>
        <!--信标频率-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_beacon"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_beacon_key"/>

            <com.edroplet.sanetel.view.custom.CustomEditText
                android:id="@+id/beacon_detail"
                style="@style/radio_group_custom_item_edit_horizontal_style"
                android:hint="@string/satellite_detail_beacon_hint"
                android:inputType="numberDecimal|number"/>
            <com.edroplet.sanetel.view.custom.CustomTextView
                style="@style/radio_group_custom_item_third_filed_horizontal_style"
                android:text="@string/frequency_unit"/>
        </LinearLayout>
        <!--载波-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_carrier"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_carrier"/>
            <com.edroplet.sanetel.view.custom.CustomEditText
                android:id="@+id/carrier_detail"
                style="@style/radio_group_custom_item_edit_horizontal_style"
                android:hint="@string/satellite_detail_carrier_hint"
                android:inputType="numberDecimal|number"/>
            <com.edroplet.sanetel.view.custom.CustomTextView
                style="@style/radio_group_custom_item_third_filed_horizontal_style"
                android:text="@string/settings_reference_carrier_unit"/>
        </LinearLayout>
        <!--符号率-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_dvb"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:padding="@dimen/list_detail_padding"
                android:text="@string/satellite_detail_symbol_rate_key" />

            <com.edroplet.sanetel.view.custom.CustomEditText
                android:id="@+id/symbol_rate_detail"
                style="@style/radio_group_custom_item_edit_horizontal_style"
                android:hint="@string/satellite_detail_symbol_rate_hint"
                android:inputType="number"/>
            <com.edroplet.sanetel.view.custom.CustomTextView
                style="@style/radio_group_custom_item_third_filed_horizontal_style"
                android:text="@string/settings_reference_dvb_unit"/>
        </LinearLayout>
        <!--备注-->
        <LinearLayout
            android:id="@+id/id_ll_satellite_detail_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:orientation="horizontal">
            <com.edroplet.sanetel.view.custom.JustifyTextView
                android:id="@+id/id_tv_satellite_detail_comment"
                style="@style/radio_group_custom_item_first_filed_horizontal_style"
                android:text="@string/satellite_detail_comment_key" />
            <com.edroplet.sanetel.view.custom.CustomEditText
                style="@style/radio_group_second_item_edit_horizontal_style"
                android:id="@+id/comment_detail"/>
        </LinearLayout>

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_activity_layout_height"
            android:gravity="bottom">
            <com.edroplet.sanetel.view.custom.CustomButton
                android:id="@+id/satellite_detail_save"
                android:text="@string/main_me_error_report_save"
                style="@style/button_horizontal_style"/>
            <com.edroplet.sanetel.view.custom.CustomButton
                android:id="@+id/satellite_detail_return"
                android:text="@string/main_me_error_report_return"
                style="@style/button_horizontal_style"/>
        </LinearLayout-->
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
