<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/operate_bar_height"
    android:background="@color/operate_bar_background">
    <!--展开、暂停、寻星、复位、收藏-->
    <com.edroplet.sanetel.view.StatusButton
        android:id="@+id/button_operate_explode"
        android:drawableTop="@drawable/antenna_exploded"
        android:text="@string/antenna_operate_explode"
        app:drawable_height="@dimen/operate_button_height"
        app:drawable_width="@dimen/operate_button_height"
        app:state_color="operate"
        style="@style/operate_bar_button_style"/>
    <com.edroplet.sanetel.view.StatusButton
        android:id="@+id/button_operate_pause"
        android:drawableTop="@drawable/park"
        android:text="@string/antenna_state_paused"
        app:drawable_height="@dimen/operate_button_height"
        app:drawable_width="@dimen/operate_button_height"
        app:state_color="operate"
        style="@style/operate_bar_button_style"/>

    <com.edroplet.sanetel.view.StatusButton
        android:id="@+id/button_operate_search"
        style="@style/operate_bar_button_style"
        android:drawableTop="@drawable/searching"
        android:elevation="0dp"
        android:padding="@dimen/no_padding"
        android:text="@string/antenna_state_searching"
        app:drawable_height="@dimen/operate_button_height"
        app:drawable_width="@dimen/operate_button_height"
        app:state_color="operate"
        android:layout_height="106dp" />
    <com.edroplet.sanetel.view.StatusButton
        android:id="@+id/button_operate_reset"
        android:drawableTop="@drawable/recycle"
        android:text="@string/antenna_operate_reset"
        app:drawable_height="@dimen/operate_button_height"
        app:drawable_width="@dimen/operate_button_height"
        app:state_color="operate"
        style="@style/operate_bar_button_style"/>
    <com.edroplet.sanetel.view.StatusButton
        android:id="@+id/button_operate_fold"
        style="@style/operate_bar_button_style"
        android:drawableTop="@drawable/folder"
        android:text="@string/antenna_operate_fold"
        app:drawable_height="@dimen/operate_button_height"
        app:drawable_width="@dimen/operate_button_height"
        app:state_color="operate"/>
    <!--android:background="@drawable/button_background"-->
</LinearLayout>