<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.edroplet.qxx.saneteltabactivity.view.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_install_line"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    <ImageView
        android:id="@+id/welcome_iv_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/welcome4"/>
    <com.edroplet.qxx.saneteltabactivity.view.custom.CustomTextView
        android:layout_below="@id/welcome_iv_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_install_line_detail"/>
    <Button
        android:id="@+id/toMain"
        android:text="@string/guide_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/button_blink"/>
</RelativeLayout>